--- a/src/main/resources/static/css/universal.css
+++ b/src/main/resources/static/css/universal.css
@@ -380,19 +380,21 @@ nav a:active {
     width: 400px;
     height: 70px;
     display: flex;
-    align-items: right;
-    align-content: center;
+    align-items: center;
+    justify-content: left;
 }
 
 .ap-l-image{
     display: flex;
-    align-items: left;
-    align-content: center;
+    align-items: center;
+    justify-content: center;
+    height: 70px;
+    width: 70px;
+    margin-right: 15px;
 }
 
 #ap-l-image{
-    height: 70px;
-    margin-right: 20px;
+    height: 60px;
     border-radius: 5px;
 }
 
@@ -409,14 +411,14 @@ nav a:active {
     margin: 0;
 }
 
-.ap-l-i-title{
+#ap-l-i-title{
     font-weight: bold;
-    font-size: 1.2rem;
+    font-size: 1.4rem;
 }
 
-.ap-l-i-author{
+#ap-l-i-author{
     font-size: 1rem;
-    color: #909090;
+    color: #bbb;
 }
 
 .ap-center{
