--- a/src/main/resources/static/css/home.css
+++ b/src/main/resources/static/css/home.css
@@ -98,19 +98,31 @@
     border-radius: 5px;
 }
 
-.carousel-btn{
+.carousel-btn {
+    text-align: center;
     position: absolute;
-    top: 60%;
-    transform: translateY(-50%);
+    top: 70%;  
+    transform: translateY(-50%) translateY(-20px); /* nudge symbol up by 1px */
     background-color: #000;
-    border: #000 2px solid;
+    border: 2px solid #000;
     color: #fff;
+    line-height: 40px;
     width: 40px;
     height: 40px;
     border-radius: 100%;
     cursor: pointer;
     z-index: 1;
     transition: 0.2s;
+    padding: 0;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 20px;
+}
+
+.prev span{
+   transform: rotate(180deg);
 }
 
 .prev{
@@ -121,21 +133,13 @@
     right: -58px
 }
 
-.carousel-button:hover{
+.carousel-btn:hover{
     color: #c3c3c3;
     background-color: #2f2f2f;
     border: #000 2px solid;
 }
 
-.carousel-button:active{
+.carousel-btn:active{
     background-color: #d4d4d4;
     color: #131313;
-}
-
-.carousel-button.prev {
-    left: -20px;
-}
-
-.carousel-button.next {
-    right: -20px;
 }
