--- a/src/main/resources/static/css/home.css
+++ b/src/main/resources/static/css/home.css
@@ -59,12 +59,24 @@
     outline: 4px solid #c26868;
 }
 
+#si-h:hover{
+    outline: 4px solid #be8a8a;
+}
+
 #cw-r, #si-r{
     outline: 4px solid #5f7fa1;
 }
 
+#si-r:hover{
+    outline: 4px solid #889eb6;
+}
+
 #cw-n, #si-n{
    outline: 4px solid #cebc59;
+}
+
+#si-n:hover{
+    outline: 4px solid #d0c589;
 }
 
 .carousel-wrapper::-webkit-scrollbar{
@@ -88,14 +100,31 @@
     color: #fff;
     border-radius: 10px;
     padding: 10px;
-    text-align: center;
+    justify-content: space-between;
     flex-shrink: 0;
     scroll-snap-align: center;
+    text-align: center;
+    cursor: pointer;
+    transition: 0.1s;
+}
+
+.song-item:hover{
+    background-color: #3c3c3c;
+    outline: 4px solid rgba(255, 255, 255, 1);
 }
 
 .song-item img{
     width: 80px;
     border-radius: 5px;
+    margin-bottom: 10px;
+}
+
+.song-item p{
+    text-align: center;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    max-width: 170px;
 }
 
 .carousel-btn {
