--- a/src/main/resources/static/css/universal.css
+++ b/src/main/resources/static/css/universal.css
@@ -126,10 +126,6 @@ header.scrolled .line{
     padding-top: 15px;
 }
 
-.scrolled #nav-profile-field{
-    padding-top: 10px;
-}
-
 #nav-profile-field a{
     width: 60px; /*w/h / 4 = space */
     height: 60px;
@@ -156,6 +152,15 @@ header.scrolled .line{
     background-color: #d4d4d4;
     color: #131313;
 }
+
+.scrolled #nav-profile-field{
+    padding-top: 10px;
+}
+
+.scrolled #nav-profile-field a{
+    margin-left: 10px;
+}
+
 
 /* ===== Content Spacing ===== */
 main {
@@ -417,8 +422,8 @@ nav a:active {
     content: attr(data-tooltip);
     position: absolute;
     bottom: 120%;
-    left: 50%;
-    transform: translateX(-50%);
+    /* left: 50%;
+    transform: translateX(-50%); */
     background-color: #000;
     color: #fff;
     padding: 5px 10px;
