--- a/src/main/resources/static/css/support.css
+++ b/src/main/resources/static/css/support.css
@@ -1,10 +1,10 @@
-#nav-discover-button{
+#nav-support-button{
     color: #c3c3c3;
     background-color: #2f2f2f;
     border: #000 2px solid;
 }
 
-#nav-discover-dot{
+#nav-support-dot{
     background-color: #1db954;
 }
 
